force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet_Item__c/bofc__BOFC_Picklist_ValueSet_Item__c.object-meta.xml
<CustomObject>
    <label>BOFC Picklist ValueSet Item</label>
    <nameField>
        <label>BOFC Picklist ValueSet Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFC Picklist ValueSet Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>