force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet_Item__c/fields/bofc__BOFC_Picklist_ValueSet__c.field-meta.xml
<CustomField>
    <fullName>bofc__BOFC_Picklist_ValueSet__c</fullName>
    <label>BOFC Picklist ValueSet</label>
    <referenceTo>bofc__BOFC_Picklist_ValueSet__c</referenceTo>
    <relationshipLabel>BOFC Picklist ValueSet Items</relationshipLabel>
    <relationshipName>BOFC_Picklist_ValueSet_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>