force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet_Item__c/fields/bofc__IsActive__c.field-meta.xml
<CustomField>
    <fullName>bofc__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>