force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet_Item__c/fields/bofc__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>bofc__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDefault</label>
    <type>Checkbox</type>
</CustomField>