force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet_Item__c/fields/bofc__Picklist_Label__c.field-meta.xml
<CustomField>
    <fullName>bofc__Picklist_Label__c</fullName>
    <label>Picklist Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>